# murmurations

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_data_acquisition.ipynb  02_murmurations.ipynb  03_classification_sklearn.ipynb  04_pytorch_dnn.ipynb  05_rank.ipynb  06_cnn_sequence.ipynb
src/murmurations/: __init__.py  data.py  features.py  frobenius.py  lmfdb.py  ml.py  plots.py  primes.py  synthetic.py  torch_models.py
