[project]
name = "murmurations"
version = "0.1.0"
description = "Reproducing and extending 'Murmurations of Elliptic Curves' (He, Lee, Oliver, Pozdnyakov)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "cypari2>=2.1",
    "psycopg[binary]>=3.1",
    "tqdm>=4.66",
    "torch>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/murmurations"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
